--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <html>
   <head>
     <title>Bruhns Games</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1> Welcome to Bruhns Games! </h1>
+    <h1 style="font-size:60px;"> Welcome to Bruhns Games! </h1>
   </body>
 </html>
