--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1 style="font-size:60px;"> Welcome to Bruhns Games! </h1>
+    <h1> Welcome to Bruhns Games! </h1>
+    <h2> The website is currently in development, please check back at a later date! </h2>
   </body>
 </html>
